--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1150,6 +1150,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "test supplémentaire"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
