Ajout de l'introduction

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4,8 +4,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction: Segment customers of an e-commerce site\n",
-    "Dans ce Notebook, nous réaliserons une segmentation des client pour l'entreprise [Olist](https://olist.com/pt-br/) afin de permettre à ses équipes de e-commerce de l'utilisez pour leurs campagnes de communication. Notre objectif sera de comprendre les différents types d'utilisateurs grâce à leur comportement et à leur données personnelles."
+    "# Segmenter les clients d'un site d'e-commerce\n",
+    "Dans ce Notebook, nous réaliserons une segmentation des client pour l'entreprise [Olist](https://olist.com/pt-br/) afin de permettre à ses équipes de e-commerce de l'utilisez pour leurs campagnes de communication. Notre objectif sera de comprendre les différents types d'utilisateurs grâce à leur comportement et à leur données personnelles.  \n",
+    "\n",
+    "\n",
+    "![Olist](https://user.oc-static.com/upload/2019/02/24/15510251487267_Capture%20d%E2%80%99e%CC%81cran%202019-02-20%20a%CC%80%2017.37.38.png)  \n",
+    "\n",
+    "\n",
+    "Olist exploite un site de commerce électronique en ligne destiné aux vendeurs, qui met en relation les commerçants et leurs produits avec les principales places de marché du Brésil. Olist a été fondée en 2015 par Tiago Dalvi. La société a son siège à Curitiba, Parana, au Brésil. Le produit phare d'Olist, Olist Store, offre aux commerçants un moyen de gérer les annonces de produits, la logistique et les paiements de magasin. Il propose également \"une expérience de vente unique\" à travers des canaux tels que Mercado Livre, B2W et Via Varejo. Olist a attiré plus de 200 000 utilisateurs dans 180 pays. La société compte plus de 45 000 commerçants et détaillants parmi ses clients."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Utilisation de méthodes non supervisées pour le regroupement des clients de profils similaires.\n",
+    "\n",
+    "### Introduction :  \n",
+    "\n",
+    "\n",
+    "Dans un paysage numérique en constante évolution, la compréhension des diverses typologies de clients revêt une importance capitale pour les entreprises opérant dans le domaine de l'e-commerce.  \n",
+    "\n",
+    "\n",
+    "Notre étude vise à disséquer et à catégoriser les utilisateurs de la plateforme [Olist](https://olist.com/pt-br/) en fonction de leurs comportements et de leurs données personnelles. En analysant ces paramètres cruciaux, nous cherchons à élucider les tendances, motivations et préférences qui sous-tendent les interactions des clients, afin d'optimiser leur expérience sur le site [Olist](https://olist.com/pt-br/) et de maximiser la valeur qu'ils en tirent.  \n",
+    "\n",
+    "\n",
+    "Cette segmentation fine permettra d'adapter la stratégies de marketing de la plateforme, d'améliorer la personnalisation des offres et de cibler efficacement les campagnes, renforçant ainsi la satisfaction et la fidélité de leur clientèle. La présente étude offre une vue d'ensemble détaillée des différentes cohortes d'utilisateurs, apportant ainsi des insights fondamentaux pour l'orientation stratégique de leur plateforme e-commerce."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Table des matières\n",
+    "\n",
+    "\n",
+    "#### [1.Nettoyage du Dataset](#1.-Nettoyage-du-Dataset)\n",
+    "#### - [A.Traitement des valeurs aberrantes](#A.-Traitement-des-valeurs-aberrantes)\n",
+    "#### - [B.Traitement des valeurs manquantes](#B.-Traitement-des-valeurs-manquantes)\n",
+    "\n",
+    "#### [2.Analyse exploratoire du Dataset](#2.-Analyse-exploratoire-du-Dataset)\n",
+    "#### - [A.Analyse univariées](#A.-Analyse-univariées)\n",
+    "#### - [B.Analyse bivariées](#B.-Analyse-bivariées)\n",
+    "#### - [C.Analyse multivariées](#C.-Analyse-multivariées)"
    ]
   },
   {
