nothing to commit

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -5946,7 +5946,7 @@
     " - montrer le délais entre l'achat et la livraison et le rating du produits\n",
     " - X montrer le panier moyen d'un client\n",
     " - X montrer le prix de livraison en fonction du cubage du colis\n",
-    " - montrer la distance entre le client et le vendeur et le délais de livraison\n",
+    " - X montrer la distance entre le client et le vendeur et le délais de livraison\n",
     " - montrer le nombre de client payant a crédit et le montant moyen\n",
     " - montrer les date d'achat\n",
     " - X montrer le nombre de client récurrent\n",
