conserver que les clients récurrents

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -5186,6 +5186,7 @@
     }
    ],
    "source": [
+    "## FAUX il y a 3345 clients récurrents, corriger cette partie, c'est logique puisque nunique prend en compte les uniques de order et customer\n",
     "clients_recurrents = data.groupby('customer_unique_id')['order_id'].nunique()\n",
     "clients_recurrents = clients_recurrents[clients_recurrents > 1]\n",
     "print(len(clients_recurrents))\n",
