--- a/RFM.ipynb
+++ b/RFM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
        "[119143 rows x 43 columns]"
       ]
      },
-     "execution_count": 474,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1661,7 +1661,7 @@
        "[99441 rows x 43 columns]"
       ]
      },
-     "execution_count": 475,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1690,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1699,7 +1699,7 @@
        "'2018-10-17 17:30:18'"
       ]
      },
-     "execution_count": 476,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1711,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2529,7 +2529,7 @@
        "[99441 rows x 44 columns]"
       ]
      },
-     "execution_count": 477,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2558,7 +2558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3388,7 +3388,7 @@
        "[99441 rows x 45 columns]"
       ]
      },
-     "execution_count": 478,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3413,7 +3413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3423,7 +3423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -4265,7 +4265,7 @@
        "[99441 rows x 46 columns]"
       ]
      },
-     "execution_count": 480,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4284,7 +4284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -5126,7 +5126,7 @@
        "[96096 rows x 46 columns]"
       ]
      },
-     "execution_count": 481,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5145,7 +5145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -5275,7 +5275,7 @@
        "[96096 rows x 4 columns]"
       ]
      },
-     "execution_count": 482,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5296,7 +5296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -5320,7 +5320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -5346,7 +5346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -5370,7 +5370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -5395,7 +5395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -5420,7 +5420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -5445,7 +5445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -5482,7 +5482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5492,7 +5492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5505,7 +5505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5517,7 +5517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -5550,7 +5550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5561,7 +5561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -5592,7 +5592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -5623,7 +5623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -5753,7 +5753,7 @@
        "[94983 rows x 4 columns]"
       ]
      },
-     "execution_count": 501,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5761,6 +5761,23 @@
    "source": [
     "df_clients"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RFM_dataset = 'RFM_dataset.csv'\n",
+    "df_clients.to_csv(RFM_dataset, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
