--- a/business_analysis_kmeans.ipynb
+++ b/business_analysis_kmeans.ipynb
@@ -5430,6 +5430,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cluster 0 est le cluster des clients récurrent"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -5781,6 +5788,13 @@
    ],
    "source": [
     "df[df['Cluster'] == 0].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cluster 1 est le cluster des clients qui ont commandé qu'une fois mais récemment "
    ]
   },
   {
@@ -6138,6 +6152,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cluster 2 est le cluster des clients qui ont commandé qu'une fois il y a longtemps"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -6489,6 +6510,13 @@
    ],
    "source": [
     "df[df['Cluster'] == 2].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cluster 3 indique les clients qui ont eu des problèmes dans leur commande"
    ]
   },
   {
