--- a/k_means_test.ipynb
+++ b/k_means_test.ipynb
@@ -578,7 +578,11 @@
     "\n",
     "fig = plt.figure(figsize=(10, 8))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
-    "ax.scatter(df['Recency'], df['Frequency'], df['Monetary'], c=df['Cluster'], cmap='viridis')\n",
+    "#ax.scatter(df['Recency'], df['Frequency'], df['Monetary'], c=df['Cluster'], cmap='viridis')\n",
+    "\n",
+    "scatter = ax.scatter(df['Recency'], df['Frequency'], df['Monetary'], c=df['Cluster'], cmap='viridis')\n",
+    "\n",
+    "fig.colorbar(scatter, ax=ax, label='Clusters')\n",
     "\n",
     "ax.set_xlabel('Recency')\n",
     "ax.set_ylabel('Frequency')\n",
