--- a/Notebook/4.business_analysis_kmeans.ipynb
+++ b/Notebook/4.business_analysis_kmeans.ipynb
@@ -68,7 +68,7 @@
        "      <td>27.289810</td>\n",
        "      <td>2</td>\n",
        "      <td>1.303348</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -92,7 +92,7 @@
        "      <td>25.737451</td>\n",
        "      <td>1</td>\n",
        "      <td>1.457031</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -116,7 +116,7 @@
        "      <td>33.093157</td>\n",
        "      <td>1</td>\n",
        "      <td>1.494089</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96092</th>\n",
@@ -132,7 +132,7 @@
        "      <td>28.407875</td>\n",
        "      <td>1</td>\n",
        "      <td>1.723809</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96094</th>\n",
@@ -140,7 +140,7 @@
        "      <td>23.908753</td>\n",
        "      <td>1</td>\n",
        "      <td>1.686544</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96095</th>\n",
@@ -170,16 +170,16 @@
        "96095  60350aa974b26ff12caad89e55993bd6  21.549312          1  1.498673   \n",
        "\n",
        "       Cluster  \n",
-       "0            1  \n",
+       "0            3  \n",
        "1            0  \n",
        "2            0  \n",
-       "3            2  \n",
+       "3            1  \n",
        "4            0  \n",
        "...        ...  \n",
-       "96091        2  \n",
+       "96091        1  \n",
        "96092        0  \n",
-       "96093        2  \n",
-       "96094        2  \n",
+       "96093        1  \n",
+       "96094        1  \n",
        "96095        0  \n",
        "\n",
        "[96096 rows x 5 columns]"
@@ -3854,7 +3854,7 @@
        "      <td>27.289810</td>\n",
        "      <td>2</td>\n",
        "      <td>1.303348</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -4016,7 +4016,7 @@
        "      <td>25.737451</td>\n",
        "      <td>1</td>\n",
        "      <td>1.457031</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -4178,7 +4178,7 @@
        "      <td>33.093157</td>\n",
        "      <td>1</td>\n",
        "      <td>1.494089</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96092</th>\n",
@@ -4286,7 +4286,7 @@
        "      <td>28.407875</td>\n",
        "      <td>1</td>\n",
        "      <td>1.723809</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96094</th>\n",
@@ -4340,7 +4340,7 @@
        "      <td>23.908753</td>\n",
        "      <td>1</td>\n",
        "      <td>1.686544</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96095</th>\n",
@@ -4624,16 +4624,16 @@
        "96095         86.86           86.86  21.549312            1  21.549312   \n",
        "\n",
        "       Frequency_y  Monetary  Cluster  \n",
-       "0                2  1.303348        1  \n",
+       "0                2  1.303348        3  \n",
        "1                1  1.601216        0  \n",
        "2                1  1.647432        0  \n",
-       "3                1  1.457031        2  \n",
+       "3                1  1.457031        1  \n",
        "4                1  1.220373        0  \n",
        "...            ...       ...      ...  \n",
-       "96091            1  1.494089        2  \n",
+       "96091            1  1.494089        1  \n",
        "96092            1  1.663569        0  \n",
-       "96093            1  1.723809        2  \n",
-       "96094            1  1.686544        2  \n",
+       "96093            1  1.723809        1  \n",
+       "96094            1  1.686544        1  \n",
        "96095            1  1.498673        0  \n",
        "\n",
        "[96096 rows x 51 columns]"
@@ -4781,7 +4781,7 @@
        "      <td>27.289810</td>\n",
        "      <td>2</td>\n",
        "      <td>1.303348</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -4943,7 +4943,7 @@
        "      <td>25.737451</td>\n",
        "      <td>1</td>\n",
        "      <td>1.457031</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -5105,7 +5105,7 @@
        "      <td>33.093157</td>\n",
        "      <td>1</td>\n",
        "      <td>1.494089</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96092</th>\n",
@@ -5213,7 +5213,7 @@
        "      <td>28.407875</td>\n",
        "      <td>1</td>\n",
        "      <td>1.723809</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96094</th>\n",
@@ -5267,7 +5267,7 @@
        "      <td>23.908753</td>\n",
        "      <td>1</td>\n",
        "      <td>1.686544</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96095</th>\n",
@@ -5551,16 +5551,16 @@
        "96095         86.86           86.86  21.549312            1  21.549312   \n",
        "\n",
        "       Frequency_y  Monetary  Cluster  \n",
-       "0                2  1.303348        1  \n",
+       "0                2  1.303348        3  \n",
        "1                1  1.601216        0  \n",
        "2                1  1.647432        0  \n",
-       "3                1  1.457031        2  \n",
+       "3                1  1.457031        1  \n",
        "4                1  1.220373        0  \n",
        "...            ...       ...      ...  \n",
-       "96091            1  1.494089        2  \n",
+       "96091            1  1.494089        1  \n",
        "96092            1  1.663569        0  \n",
-       "96093            1  1.723809        2  \n",
-       "96094            1  1.686544        2  \n",
+       "96093            1  1.723809        1  \n",
+       "96094            1  1.686544        1  \n",
        "96095            1  1.498673        0  \n",
        "\n",
        "[96096 rows x 51 columns]"
@@ -5574,6 +5574,16 @@
    "source": [
     "df['Cluster'] = df['Cluster'].astype(int)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster_dataset = '../Data/4.KMeans_dataset.csv'\n",
+    "df.to_csv(cluster_dataset, index=False)"
    ]
   },
   {
