nettoyage et commentaires

--- a/Notebook/1.Analyse_exploratoire.ipynb
+++ b/Notebook/1.Analyse_exploratoire.ipynb
@@ -3146,7 +3146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous ne remarquons pas à proprement parler de valeurs aberrantes dans les données mais certaines peuvent sembler atypique. Cela s'explique par le fait que `Olist` vend une large variété de produits."
+    "Nous ne remarquons pas à proprement parler de valeurs aberrantes dans les données mais certaines peuvent sembler atypique, mais s'explique par la catégorie des produits. En effet `Olist` vend une large variété de produits dont certains sont très encombrant par nature."
    ]
   },
   {
@@ -3192,7 +3192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous pouvons remarquer des valeurs manquantes dans `order_delivered_customer_date`, dans `order_delivered_delivered_date`, dans `review_comment_title` et dans `review_comment_message`. Les dates manquantes correspondent à des clients qui n'ont pas encore été livré ou qui dont le colis n'a pas encore donné au livreur, nous remplaçons ces valeurs manquantes par des valeurs neutre qui nous permettrons d'être correctement utilisé plus tard. Pour les 2 autres variables qui disposent de valeurs manquantes nous remplacerons ces valeurs par `no title` et `no comment` pour bien les identifier dans la suite de notre étude."
+    "Nous pouvons remarquer de nombreuses valeurs manquantes dans `order_delivered_customer_date`, dans `order_delivered_delivered_date`, dans `review_comment_title` et dans `review_comment_message`. Les dates manquantes correspondent à des clients qui n'ont pas encore été livré ou qui dont le colis n'a pas encore donné au livreur, nous remplaçons ces valeurs manquantes par des valeurs neutre qui nous permettrons d'être correctement utilisé plus tard. Pour les 2 autres variables qui disposent de valeurs manquantes nous remplacerons ces valeurs par `no title` et `no comment` pour bien les identifier dans la suite de notre étude. Certaines variables disposent de peu de valeurs manquantes mais empêchant la manipulation des données, ces informations n'étant pas primordiale, nous pouvons remplacer les valeurs manquantes par des zéros."
    ]
   },
   {
@@ -4895,6 +4895,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lorsqu'il y a un soucis avec la commande, de nombreuses variables identifient l'individus comme manquant, pour simplifier notre travail et identifier ces valeurs nous remplaçons les valeurs manquantes par des zéros."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
@@ -4991,6 +4998,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Certaines localités ne sont pas correctement identifié par les données de géolocalisation. Nous remplaçons les valeurs manquantes par des valeurs les plus proches de la localités concernées."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
@@ -5032,6 +5046,13 @@
    "outputs": [],
    "source": [
     "data.drop(columns={'geolocation_city_y'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il existe également de nombreuses localités qui ne sont pas du tout identifiables par leurs données de géolocalisation. Pour faciliter le travail, nous remplaçons les valeurs manquantes par la géolocalisation de leur état. Cette méthode n'est pas l'idéale mais la géolocalisation du client ou du vendeur n'est pas primordiale dans notre étude et peut être négligée."
    ]
   },
   {
@@ -5193,29 +5214,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(14495,)\n",
-      "14.514652014652016\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(data['customer_unique_id'].value_counts()[data['customer_unique_id'].value_counts() > 1].shape)\n",
-    "print((13948/(len(data['customer_unique_id'].unique())))*100)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous pouvons également analyser le nombre de catégories de produits vendus sur la plateforme, elles sont au nombre de 71."
+    "Nous pouvons également analyser le nombre de catégories de produits vendus sur la plateforme, elles sont au nombre de 72."
    ]
   },
   {
@@ -6496,7 +6498,7 @@
     "\n",
     "plt.xlabel('Distance en Km')\n",
     "plt.ylabel('Délais en jours')\n",
-    "plt.title('Nuage de points entre le volume des colis et leurs dimensions')\n",
+    "plt.title('Nuage de points entre le le délais de livraison et la distance entre le vendeur et le client')\n",
     "\n",
     "plt.show()"
    ]
