--- a/Notebook/2.RFM.ipynb
+++ b/Notebook/2.RFM.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RFM\n",
+    "\n",
+    "\n",
+    "Pour nous permettre de ségmenter les différents profils de clients nous allons utiliser la segmentation RFM. Cette segmentation prend en compte la Récence, la Fréquence des commandes et le Montant pour établir des segments de clients homogènes. \n",
+    "\n",
+    "\n",
+    "1. **Récence (R - Recency)** : Cela mesure depuis combien de temps un client n'a pas effectué d'achat. Un client qui a acheté récemment est considéré comme plus actif et potentiellement plus engagé.\n",
+    "2. **Fréquence (F - Frequency)** : Cela fait référence à la fréquence à laquelle un client effectue des achats. Un client qui achète régulièrement est souvent considéré comme plus précieux, car il est plus susceptible de rester fidèle à la marque.\n",
+    "3. **Montant (M - Monetary)** : Cela fait référence au montant total dépensé par un client sur une période donnée. Les clients qui dépensent davantage sont généralement considérés comme plus précieux pour l'entreprise."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -1669,16 +1684,6 @@
    "source": [
     "df = df.drop_duplicates(subset=['order_id'])\n",
     "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Nous souhaitons effectuer une analyse RFM sur nos différents clients. Nous devons alors créer ces nouvelles variables.\n",
-    "1. **Récence (R - Recency)** : Cela mesure depuis combien de temps un client n'a pas effectué d'achat. Un client qui a acheté récemment est considéré comme plus actif et potentiellement plus engagé.\n",
-    "2. **Fréquence (F - Frequency)** : Cela fait référence à la fréquence à laquelle un client effectue des achats. Un client qui achète régulièrement est souvent considéré comme plus précieux, car il est plus susceptible de rester fidèle à la marque.\n",
-    "3. **Montant (M - Monetary)** : Cela fait référence au montant total dépensé par un client sur une période donnée. Les clients qui dépensent davantage sont généralement considérés comme plus précieux pour l'entreprise."
    ]
   },
   {
@@ -5748,7 +5753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Impossible de modifier la distribution de la variable Frequency, l'algorithme que nous utilisons est moins sensible aux déséquilibres de distribution nous pouvons laisser cette variable tel qu'elle."
+    "Impossible de modifier la distribution de la variable Frequency, l'algorithme K means que nous utiliserons est moins sensible aux déséquilibres de distribution nous pouvons laisser cette variable tel qu'elle."
    ]
   },
   {
