--- a/Notebook/3.CAH.ipynb
+++ b/Notebook/3.CAH.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CAH \n",
+    "\n",
+    "L'analyse hiérarchique ascendante (ou CAH) est une technique de clustering est utilisée pour regrouper des données en fonction de leurs similitudes en créant une hiérarchie de regroupements à partir des données."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
@@ -171,6 +180,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour simplifier notre étude sur le nombre de cluster que nous allons créer, nous pouvons effectuer un échantillonnage de nos données afin d'optimiser les test de clustering."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -230,6 +246,14 @@
     "\n",
     "X_norm = preprocessing.scale(X)\n",
     "print(X_norm.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour déterminer le nombre de clusters adéquats pour la segmentation des clients avec ce modèle de ML nous utilisons un dendrogramme. C'est un type de diagramme arborescent utilisé en analyse hiérarchique pour représenter la manière dont les clusters (ou groupes) de données sont formés et organisés au fil des étapes de l'analyse.\n",
+    "Un dendrogramme est particulièrement utile pour visualiser la structure hiérarchique des regroupements de données. Il permet de comprendre comment les clusters sont formés, quels sont les points de jonction les plus significatifs, et comment les groupes sont liés entre eux."
    ]
   },
   {
@@ -519,6 +543,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous pouvons par la suite agréger les différents cluster observés aux différents individus et les observer graphiquement. Le nombre de variable de la segmentation RFM étant au nombre de 3 nous effectuons une visualisation graphique en 3D."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
@@ -723,6 +754,17 @@
     "\n",
     "plt.title('Clusters en 3D')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cette étape nous permet d'évaluer la pertinence du modèle en réalisant une étude de sa performance avec différentes métriques.\n",
+    " - Un métric de temps de calcul du modèle de ML.\n",
+    " - Le silhouette score\n",
+    " - le coefficient de distortion n'étant pas disponible pour ce modèle nous l'initialisons à 0.\n",
+    " - Davies Bouldin (mesure à quel point les clusters sont compacts et bien séparés les uns des autres.)"
    ]
   },
   {
