--- a/Notebook/3.k_means.ipynb
+++ b/Notebook/3.k_means.ipynb
@@ -181,6 +181,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour simplifier notre étude sur le nombre de cluster que nous allons créer, nous pouvons effectuer un échantillonnage de nos données afin d'optimiser les test de clustering."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
@@ -243,6 +250,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous étudions le silhouette score pour différentes possibilitées de clustering, de 2 à 10. \n",
+    "Le silhouette score est une métrique utilisée pour évaluer la qualité d'un clustering. Il mesure à quel point les clusters sont bien séparés les uns des autres. Un silhouette score plus élevé indique les clusters sont mieux définis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
@@ -279,6 +294,13 @@
     "    silhouettes.append(silh)\n",
     "\n",
     "plt.plot(range(2, 10), silhouettes, marker='o')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous créons des composantes principales qui synthètisent nos données en deux variables nous permettant d'avoir une visualisation graphique du clustering de nos données en 2D."
    ]
   },
   {
@@ -345,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pour déterminer le nombre optimal de cluster à utiliser pour notre algorithme k-means nous utilisons la méthode du coude (Elbow Method), Elle consiste à observer la variation de l'inertie (somme des carrés des distances entre les points et les centroïdes) en fonction du nombre de clusters."
+    "Pour déterminer le nombre optimal de cluster à utiliser pour notre algorithme k-means nous utilisons la méthode du coude (Elbow Method), Elle consiste à observer la variation de l'inertie (somme des carrés des distances entre les points et les centroïdes) en fonction du nombre de clusters.  En examinant le graphique, nous cherchons un point où l'inertie intra-cluster commence à diminuer de manière significativement plus lente. Cela ressemble à la courbure d'un \"coude\". Le point où cette décélération devient notable est souvent interprété comme le nombre optimal de clusters."
    ]
   },
   {
@@ -392,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous pouvons également utiliser le coefficient de distortion pour obtenir le k le plus adapté à notre modèle. Connu sous le nom d'inertie intra-classe, c'est une mesure qui évalue la compacité des clusters obtenus lors de l'application d'un algorithme de clustering comme K-means. Il mesure la somme des carrés des distances euclidiennes entre chaque point de données et le centroïde de son cluster associé."
+    "Nous pouvons également utiliser le coefficient de distortion pour obtenir le k le plus adapté à notre modèle. Connu sous le nom d'inertie intra-classe, c'est une mesure qui évalue la compacité des clusters obtenus lors de l'application d'un algorithme de clustering comme K-means. Il mesure la somme des carrés des distances euclidiennes entre chaque point de données et le centroïde de son cluster associé. Nous cherchons souvent à trouver le nombre de clusters qui réduit le coefficient de distortion de manière significative, avant que la réduction devienne moins significative cette méthode est semblable à la méthode du coude."
    ]
   },
   {
@@ -613,6 +635,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous pouvons par la suite agréger les différents cluster observés aux différents individus et les observer graphiquement. Le nombre de variable de la segmentation RFM étant au nombre de 3 nous effectuons une visualisation graphique en 3D."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
@@ -827,45 +856,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 62,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.31285715103149414\n",
-      "0.4082134946167241\n",
-      "98799.66970050114\n"
-     ]
-    }
-   ],
    "source": [
-    "duration_time = scoring_time_end - scoring_time_start\n",
-    "print(duration_time)\n",
-    "silh_score = metrics.silhouette_score(scaled_features, kmeans.labels_)\n",
-    "print(silh_score)\n",
-    "print(kmeans.inertia_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6863298863412862\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import davies_bouldin_score\n",
-    "db_score = davies_bouldin_score(scaled_features, kmeans.labels_)\n",
-    "print(db_score)\n"
+    "Cette étape nous permet d'évaluer la pertinence du modèle en réalisant une étude de sa performance avec différentes métriques.\n",
+    " - Un métric de temps de calcul du modèle de ML.\n",
+    " - Le silhouette score\n",
+    " - le coefficient de distortion\n",
+    " - Davies Bouldin (mesure à quel point les clusters sont compacts et bien séparés les uns des autres.)"
    ]
   },
   {
