--- a/Notebook/4.business_analysis_kmeans.ipynb
+++ b/Notebook/4.business_analysis_kmeans.ipynb
@@ -8442,10 +8442,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "A partir de cette analyse des différents clusters nous pouvons déterminer la typologie des clients segmenté dans les différents clusters. \n",
+    "\n",
+    "Nous avons :\n",
+    "- un cluster de client ayant commandé 1 fois et ayant commandé récemmement\n",
+    "- un cluster de client ayant commandé 1 fois et ayant commandé il y a longtemps\n",
+    "- un cluster de client ayant commandé une ou deux fois et donc la commande n'a pas été correctement traité ou à été annulé\n",
+    "- un cluster de client ayant commandé plus d'une fois"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
